complete random password generator

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <h1>Generate a <br><span>Random Password</span></h1>
         <div class="display">
-            <input type="text" id="Password" placeholder="Password">
-            <img src="images/copy.png" >
+            <input type="text" id="password" placeholder="Password">
+            <img onclick="copyPassword()" src="images/copy.png" >
         </div>
-        <button> <img src="images/generate.png" alt=""> Generate Password</button>
+        <button onclick="createPassword()"> <img src="images/generate.png" alt=""> Generate Password</button>
     </div>
 
     
